create field done. play animation left

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 
   /* Add your custom configuration here. */
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "lib": ["es2018"],
     "noImplicitAny": true
